@@ -36,11 +36,7 @@ static int  _tabFlags       = PCTab4Sp;
 
 - (BOOL) becomeFirstResponder
 {
-  NSString *file = [[editor path] lastPathComponent];
-
-  [(PCEditorController *)[self delegate] setBrowserPath:file];
-
-  return YES;
+  return [editor becomeFirstResponder];
 }
 
 + (void)setTabBehaviour:(int)tabFlags
